2008-04-26  Oliver Hunt  <oliver@apple.com>

        Reviewed by Maciej.

        Bug 18628: SQUIRRELFISH: need to support recursion limit
        <https://bugs.webkit.org/show_bug.cgi?id=18628>

        Test to ensure we don't crash when re-entering global code
        with a full register file, and that we don't allow unbounded
        recursion by re-entering on a new register file..

        * fast/js/global-recursion-on-full-stack-expected.txt: Added.
        * fast/js/global-recursion-on-full-stack.html: Added.

2008-05-19  Alexey Proskuryakov  <ap@webkit.org>

        Reviewed by Darin.

        http://bugs.webkit.org/show_bug.cgi?id=18308
        SVG Encoding error with fill attribute

        * fast/loader/data-url-encoding-html-expected.txt: Added.
        * fast/loader/data-url-encoding-html.html: Added.
        * fast/loader/data-url-encoding-svg-expected.txt: Added.
        * fast/loader/data-url-encoding-svg.html: Added.
        * fast/loader/javascript-url-encoding-expected.txt: Added.
        * fast/loader/javascript-url-encoding.html: Added.

2008-05-19  Alexey Proskuryakov  <ap@webkit.org>

        Reviewed by Darin.

        https://bugs.webkit.org/show_bug.cgi?id=18421
        <rdar://problem/5857369> XMLHttpRequest does not properly encode & and < in outgoing messages

        * http/tests/xmlhttprequest/serialize-document-expected.txt: Added.
        * http/tests/xmlhttprequest/serialize-document.html: Added.

2008-05-18  Darin Adler  <darin@apple.com>

        Reviewed by Sam.

        - test for <rdar://problem/5943569> crash due to stale ownerNode pointer

        * fast/dom/StyleSheet: Added.
        * fast/dom/StyleSheet/ownerNode-lifetime-expected.txt: Added.
        * fast/dom/StyleSheet/ownerNode-lifetime.html: Added.

2008-05-18  Brady Eidson  <beidson@apple.com>

        Reviewed by Sam Weinig

        Fix for https://bugs.webkit.org/show_bug.cgi?id=19111